syntax = "proto2";

message Data {
    optional string s = 1 [default = "a\n\0"];
    optional bytes b = 2 [default = "\0\xFF"];
}

message List {
    repeated Data list = 1;
}

message NumList {
    repeated uint32 list = 1;
}

message StrList {
    repeated string list = 1;
}

message FixedList {
    repeated fixed32 list = 1;
}
